new file:   bridges/index.htm 	renamed:    mmgt_layers/images/tall.jpg -> lod_1.5_models/images/tall.jpg 	renamed:    mmgt_layers/images/wide.jpg -> lod_1.5_models/images/wide.jpg 	new file:   lod_1.5_models/index.htm 	new file:   lod_1.5_models/indexbk.htm 	deleted:    mmgt_layers/images/arcgis_edit_tasks.jpg 	deleted:    mmgt_layers/images/badnormals.jpg 	deleted:    mmgt_layers/images/config_data.jpg 	deleted:    mmgt_layers/images/filesystem_context.jpg 	deleted:    mmgt_layers/images/goodnormals.jpg 	deleted:    mmgt_layers/images/google_earth.jpg 	deleted:    mmgt_layers/images/import_tasks.jpg 	deleted:    mmgt_layers/images/import_tools.jpg 	deleted:    mmgt_layers/images/initialize_tasks.jpg 	deleted:    mmgt_layers/images/initialize_tools.jpg 	deleted:    mmgt_layers/images/lifecycle_close.jpg 	deleted:    mmgt_layers/images/lifecycle_init.jpg 	deleted:    mmgt_layers/images/lifecycle_stage.jpg 	deleted:    mmgt_layers/images/lifecycle_workflow.jpg 	deleted:    mmgt_layers/images/map_contents.jpg 	deleted:    mmgt_layers/images/model_mgt_files.jpg 	deleted:    mmgt_layers/images/model_work.jpg 	deleted:    mmgt_layers/images/next_edition_tasks.jpg 	deleted:    mmgt_layers/images/next_edition_tools.jpg 	deleted:    mmgt_layers/images/scene_contents.jpg 	deleted:    mmgt_layers/images/stage_edit_views.jpg 	deleted:    mmgt_layers/images/stage_gdb.jpg 	deleted:    mmgt_layers/images/surface_edit_tasks.jpg 	deleted:    mmgt_layers/images/tasks.jpg 	deleted:    mmgt_layers/images/tools.jpg 	modified:   mmgt_layers/index.htm 	new file:   mmgt_project/images/mp_status_styles.jpg 	modified:   mmgt_project/images/tasks.jpg 	modified:   mmgt_project/index.htm 	modified:   resources/cityschema_includes.js

--- a/mmgt_layers/index.htm
+++ b/mmgt_layers/index.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <!-- Hi Folks, this is the template file for pages in the citySchema.org documentation library -->
 <head>
-    <title>Layers Popups and WebScenes</title>
+    <title>Layers, Popups and WebScenes</title>
     <meta name="description" content="Covers procedures for producing and publishing Layers with custom pop-ups. ">
     <meta name="keywords" content="City Modeling, Digital Humanities, Geography, citySchema">
     <meta name="author" content="Paul B. Cote">
@@ -34,7 +34,7 @@
 <!-- Page content goes inside the article div -->
 <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter. -->
-    <h1 class="title">Managing and Publishing Layers Pop-Ups and Web Scenes</h1>
+    <h1 class="title">Layers and Pop-Ups and Web Scenes</h1>
 
 <p>Visually presenting and sorting subsets of the building model collection is a necessary aspect of most applications of the city model within ArcGIS, public web-scenes and through ArcGIS Urban applications. The citySchema Model Management workspace provides a style palette for coloring models according to status that provides a familiar, intuitive legend for quickly understanding the status of building models.  This pallette is used for every visualization of building models on all platforms.
 <p>
