--- a/mmgt_project/index.htm
+++ b/mmgt_project/index.htm
@@ -53,8 +53,9 @@
       <li><a href="#context">Filesystem Context </a>
       <li><a href="#tour">Tour of the Model Management Workspace Folder: Data Management</a>
       <li><a href="#lifecycle">Lifecycle of a Model Management Workspace</a>
-      <li><a href="#project">Tour of the ArcGIS Pro Project: Properties, Layers and Views</a>
-      
+      <li><a href="#project">Tour of the ArcGIS Pro Project: Properties</a>
+      <li><a href="#scenes">Tour of the Scenes, Maps, Layers and Views</a>
+        <li><a href="#tools"> Explore Tasks and Tools</a>
       </ol>
 <HR>
     <h2 id="roles">Enterprise and Technical Viewpoints</h2>
@@ -195,8 +196,8 @@ Stages in the lifecycle of a model management workspace are depicted in the slid
 <hr>
 
 
-<h2>Project Layers, Scenes and Maps</h2>
-<p>The ModelMgt project includes one map and one 3D scene.  
+<h2 id="scenes">Project Scenes, Maps, Layers and Query Views</h2>
+<p>The ModelMgt project includes two maps and two 3d scenes.  Take a look at these in the maps folder on Catalog Pane.  As you can see there is a map and a scene that is set up for editing multipatch models, and the default map and scene which are used in most other functions.  Most of the tools and tasks, except the ones associated with editing, assmue that your active view (and table of contents) is the default Scene view.    
 <p>
   The layers in the Map table of contents provide an opportunity to discuss some of the important source layers that are used by the model management processes.  As we look through them, set your table of contents to <b>View Source Folders</b> so you can see where these data-sets are stored within the <b>Sources folder</b> of your ModelCollection_Mgt workflow folder. 
 </p>
@@ -221,8 +222,22 @@ Stages in the lifecycle of a model management workspace are depicted in the slid
   </div>
 
   <div class="feature funfact">
-    <h3>About Re-usable Layers</h3>
+    <h3>About Re-usable Layers and Styles</h3>
+More about styles and pop-ups is covered in the citySchema web page, <a href="../mmgt_layers/index.htm">Scene Layers and Pop-Ups for Web Scenes</a>. 
+
     <p>All of the layers for viewing 3d models use the same symbolization for models according to status.  The master layer for this symbology can be found in the <b>ArcDocs\Layers\MP_Status.lyrx</b> file.  This symbology can be applied to any multipatch layer using the <b>Appearance\Import function </b> as described in <a href="https://pro.arcgis.com/en/pro-app/2.7/help/mapping/layer-properties/import-symbology-from-another-layer.htm" target="arcdoc">ImportSymbology from another Layer</a>.
+    <p>
+    The particular face and edge colors fro multipatch features / according to status, can be found in the saved <b>Bos3sStatus Style-Set</b> pictured below.
+    
+    <figure class="middle">
+      <img src="images/mp_status_styles.jpg">
+      <figcaption>Saved Multipatch Status Styles</figcaption>
+    </figure>
+
+<p>Read more about managing re-useable styles can be found in the <a href="https://pro.arcgis.com/en/pro-app/latest/help/projects/styles.htm" target="arcdocs">official ArcGIS manual page</a> 
+
+<h3>Save your Styles!</h3>
+
    <p>Any time you change the treatment of the status symbology, it would be a good idea to re-save this master layer. 
      <p>Many group layers are also saved in the layers folder.  It is a good habit to save any of the major group layers to this location any time you make changes to them.
     <p>The project option  <b>Geoprocessing > Remove Layers that are overwritten by geoprocessing tools</b> should always be un-checked.  Unfortunately this is not the default, and even un-sets itself when a project is copied. As a result, the symbology for layers will get wiped out when geoprocessing tools delete and re-generate data-sets.  You will learn this the hard way many times but be happy that the prior state of these layers and group layers can be recovered. 
