--- a/mmgt_project/index.htm
+++ b/mmgt_project/index.htm
@@ -55,6 +55,7 @@
       <li><a href="#lifecycle">Lifecycle of a Model Management Workspace</a>
       <li><a href="#project">Tour of the ArcGIS Pro Project: Properties</a>
       <li><a href="#scenes">Tour of the Scenes, Maps, Layers and Views</a>
+     <li><a href="#layers">Managing Re-Useable Layers and Styles</a>
         <li><a href="#tools"> Explore Tasks and Tools</a>
       </ol>
 <HR>
@@ -222,7 +223,7 @@ Stages in the lifecycle of a model management workspace are depicted in the slid
   </div>
 
   <div class="feature funfact">
-    <h3>About Re-usable Layers and Styles</h3>
+    <h3 id="layers">About Re-usable Layers and Styles</h3>
 More about styles and pop-ups is covered in the citySchema web page, <a href="../mmgt_layers/index.htm">Scene Layers and Pop-Ups for Web Scenes</a>. 
 
     <p>All of the layers for viewing 3d models use the same symbolization for models according to status.  The master layer for this symbology can be found in the <b>ArcDocs\Layers\MP_Status.lyrx</b> file.  This symbology can be applied to any multipatch layer using the <b>Appearance\Import function </b> as described in <a href="https://pro.arcgis.com/en/pro-app/2.7/help/mapping/layer-properties/import-symbology-from-another-layer.htm" target="arcdoc">ImportSymbology from another Layer</a>.
