modified:   mmgt_layers/index.htm 	new file:   mmgt_overview/images/tall.jpg 	new file:   mmgt_overview/images/wide.jpg 	new file:   mmgt_overview/index.htm 	new file:   resources/Xdocutree.css 	modified:   resources/docutree.css

--- a/mmgt_layers/index.htm
+++ b/mmgt_layers/index.htm
@@ -40,7 +40,7 @@
 
 <p>Before reading this, it may be helpful to review the <a href="../mmgt_project/index.htm#layers">Managing Re-Useable Layers and Styles</a> documentation on re-usable layers and the master shade library which is part of the Tour of the Model Management Workspace.
 
-<p>Visually presenting and sorting subsets of the building model collection is a necessary aspect of most applications of the city model within ArcGIS, public web-scenes and through ArcGIS Urban applications. The citySchema Model Management workspace provides a style palette for coloring models according to status that provides a familiar, intuitive legend for quickly understanding the status of building models.  This pallette is used for every visualization of building models on all platforms.
+<p>Visually presenting and sorting subsets of the building model collection is a necessary aspect of most city model applications. The citySchema Model Management workspace provides a style palette for coloring models according to status that provides a familiar, intuitive legend for quickly understanding the status of building models.  This pallette is used for every visualization of building models on all platforms.
 <ul>
   <li><a href="https://boston.maps.arcgis.com/home/webscene/viewer.html?webscene=80de5aea1a3348bfae7ae4c91659a75e" target="agol">Visit the public web-scene demo</a> 
   <li>Note the way that the Radio buttons work and how the legend does not contain a lot of excess values.
