modified:   model_ids/index.htm

--- a/model_ids/index.htm
+++ b/model_ids/index.htm
@@ -80,7 +80,7 @@ After messing around with this, we determined that a model id with 15 random cha
 <p>
   Our model identifier format will be:
 <ul>
-  <li>BOS_A1B2C-3D5E6-F7G8H
+  <li>BOS-A1B2C-3D5E6-F7G8H
 </ul>
 
 
