modified:   mmgt_overview/index.htm 	deleted:    model_ids/images/.~lock.birthday_spreadsheet.ods# 	modified:   model_ids/images/birthday_spreadsheet.ods 	modified:   whatsnew/index.htm

--- a/mmgt_overview/index.htm
+++ b/mmgt_overview/index.htm
@@ -168,11 +168,11 @@ It is recommended that any time the Model Management workspace is initialized, t
 <p>The model download site provides access to all of the model resources produced at the time of the last Major Update. However, it is also possible to publish new models and status changes to the download site more frequently. 
   <p>From a user's perspective, discovery of recent status changes and download of new models is accomplished with the clickable map controlled by check-box filters that allow users to view and download specific models that may be needed to reflect newly approved buildings and, if necessary, neighboring models that have been modified to create the  pocket for the new buildings. 
   <p>
-    Outside of Major Updates, the vast majority of the of the OBJ files in the Archive Repository are unchanged.  from one year to the next, a few models will undergo status changes: Public Existing models may be demoted to become Historical.  Some models in the Public New Models folder may be promoted to "Under Construction", "Project Complete" or demoted to "Proposal Superseded".  All of these status changes are reflected in the newly published public catalog table as a geoJSON file and/or by publishing the equivelent polygon feature class to a map service on ArcGIS on-line. 
+    Outside of Major Updates, the vast majority of the of the OBJ files in the Archive Repository are unchanged.  from one year to the next, a few models will undergo status changes: Public Existing models may be demoted to become Historical.  Some models in the Public New Models folder may be promoted to "Under Construction", "Project Complete" or demoted to "Proposal Superseded".  All of these status changes are reflected in the newly published public catalog table as a geoJSON file and/or by publishing the equivilent polygon feature class to a map service on ArcGIS on-line. 
 <p>
   When updates are pushed to the Archive Repository, any new models that have passed through the Stage_NewModels_MP feature class since the last repository update have their OBJ files pushed to the Public New Models model store folder. 
 <p>
-  When models originally submitted as proposals are superseded by new proposals or by measurefd models, the associated OBJ files may be moved out of the Public New Models model store to the Internal model store. 
+  When models originally submitted as proposals are superseded by new proposals or by measured models, the associated OBJ files may be moved out of the Public New Models model store to the Internal model store. 
 <p>
   It is advisable to push the new models and catalog files to the Archive Repository every time the Model Management project is initialized, but repository updates can also happen more frequently than that. 
 
