--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,11 +38,54 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
-  <ul>
-  <li><b>June 15, 2022: Web-Scene Publishing Tasks Provide Model Download Link in ArcGIS On-Line Pop-Ups
-    </b><p>
+  <h2>Release 4.0.0 February 20 2023</h2>
+   <p>Major new features with this release:
+    <ul>
+      <li>The <b>ModelStore pattern has been clarified and articulated</b> as a collection of open format models with associated catalog and finding aids.  These changes support new workflows for model validation and in future releases will support the way that the Model Downloads site is updated.  
+      <li>The ModelBatch pattern has been articulated as an extension of the more general Workspace pattern. These improvements provide clarity to the workflows for Major Updates, for model validation and for model splitting and repairs. 
+      <p>
+        Several workflows, tools and tasks associated with the ModelBatch pattern have been improved , including: 
+        <ul>
+          <li>An autoAssembled_MP stage for the consolidated source models as multipatch.  This is the new target for Assigning Model and Geometric attributes. 
+          <li>Batch-specific tool-box provides easily repeatable source model assembly and assignment of batch-specific model attributes. 
+          <li>The Assign Geometric Attributes tool and task has been simplified.  It now modifies the input feature class. 
+          <li>Batch-specific ModelStore preserves OBJ models
+          <li>Two new FME workbenches:
+            <ul>
+              <li>Validate assembled models produce a ModelStore  representing validated models representing source models and changes performed in the initial Prep_MP.
+              <li>Produce a Ready_MP feature class validated as proving a round-trip to open OBJ format. 
+              </ul>   
+          <li>The <b>Assign Model Attributes</b> tool automatically detects the Model Batch and sets various dates and editor information. 
+          <li>Promo/Demo for new and modified models is now carried out in the Prep_MP feature class
+          </ul>
+      
+          <h3>New tools in pbcUtils tool group</h3> 
+            <ul>
+              <li>Import Models with model-specific CSV Insertion points.  This is a common way of exchanging 0,0,0 based 3D models between platforms. 
+              <li>Import Models frm KMZ format.  Another common exchange format -- which is similar to our ModelStore idea
+              </ul>
+
+            </ul>
+          </ul>   
+
+   <h2>Changes to Schema and related Workflows</h2>
+    <p>Schema changes expand the list of QA Flags to better support Promo/Demo workflows.
+       <ul>
+
+        <li><b>The Modified status has been dropped</b>.  For any model that represents a past shape for a structure, its status simply becomes History. If the Disappear Date is left Null, this date wil be set automatically when the next geodatabase edition is pushed. 
+        <li>Several new values have been added to the QA_Flag domain to support workflows for flagging Promo and Demo candidates and various cases of models needing repair. 
+        <li>The Model ID has been expanded to a 21 character string in the form: <b>BOS-A1B2C-3D4E5-F6G7H</b>. This new ID has a 1 in 2 billion chance of drawing a duplicate in a model collection of 50 million models. See <a href="../model_ids/index.htm" target="sidecar">Model Identifiers</a>.
+        <li>A <b>new ModStore field</b>  has been added which wil make it possible to construct a path or URL to the OBJ for any model, some of which may be in the Changed, Internal or Existing ModelStores.
+        <li>Hand-Made models of buildings that have been observed to be "topped out" will now have their status set to Construction Complete.  Models with this status will stay in the Approved_MP feature class until they are replaced by a measured model. Whence their status will become Project Complete which will cause them to be moved to the Internal feature class and model store  
+ </ul>
+
+
+
+<h2>June 15, 2022: Web-Scene Publishing Tasks Provide Model Download Link in ArcGIS On-Line Pop-Ups</h2>
+    <p>
     We have improved our layer management capability with in the Model Management workspace to automate the production of ArcGIS On-Line Web feature services with streamlined pop-ups -- that provide for model downloads!  <a href="https://boston.maps.arcgis.com/home/webscene/viewer.html?webscene=80de5aea1a3348bfae7ae4c91659a75e" target="outboard"> Visit the demo here.</a>
-  <li><b>May 20, 2022: CityTiler Repository Posted</b><p>
+
+  <h2>May 20, 2022: CityTiler Repository Posted</h2>
       <a href="https://github.com/CitySchema/cityschema-citytiler" target="outboard">The CitySchema-CityTiler</a> project includes all of the tools for:
       <ul>
         <li>Creating a tiling scheme that facilitates exchange of georeferenced models between GIS and design-oriented 3d modeling tools.  
@@ -50,19 +93,19 @@
         <li>Creating tiled groundplan images that drape precisely onto the tiled terrain models 
       </ul>
 
-  <li><b>May 16, 2022: Presentation Slides from the Northeast Arc User Conference</b><p>
+  <h2>May 16, 2022: Presentation Slides from the Northeast Arc User Conference</h2>>
     <a href="http://www.pbcgis/presentations/pbcgis_nearc_20220516.pdf" target="outboard">This slide deck</a> discusses some of new ideas about building a metropolitan community dedicated to city model stewardship.
 
-  <li><b>May 5, 2022: Docutree Project Improves Modular Documentation</b><p>
+  <h2>May 5, 2022: Docutree Project Improves Modular Documentation</h2>
     The simple but effective html documentation framework for citySchema.org has been forked to its own gitHub project -- <a href="http://www.github.com/pbcgis/docutree" target="outboard">www.github.com/pbcgis/docutree</a>.  The idea here is to make it easier for users to contribute or capture documentation collections or individual pages that relate to their projects. 
   
-    <li id="coordinationvid"><b>January 12, 2022: Intro video posted on YouTube.</b>
+    <h2>January 12, 2022: Intro video posted on YouTube.</h2>
   <p>The first video has been posted to the citySchema.org YouTube channel.  <a href="https://youtu.be/IeyYV5W5u94" target="sidecar">Take and Give: Coordinating City Model Activity</a> provides an intro to the citySchema architecture and a technical overview of the technique for sharing editable models with any commercial modeling tool while retaining precise 3D georeferencing.
   </p>
-  <li id="2022funding"><b>January 1, 2022: A New Year of Funding for citySchema.org.</b>
+  <h2 id="2022funding">January 1, 2022: A New Year of Funding for citySchema.org.</h2>
   <p>The Boston Planning and Development Agency has renewed its support for citySchema.org with a new year of funding to support the continued development of tools and documentation!  
 
-  <li id="modelmgt_git"><b>December 27, 2021: Model Collection Management Tools for ArcGIS Pro posted on GitHub.</b>
+  <h2>December 27, 2021: Model Collection Management Tools for ArcGIS Pro posted on GitHub.</h2>
   <p>An ArcGIS Pro project with all of the tools, tasks and layers necessary to demonstrate the procedures for updating the building model collection has been posted on GitHub.  This repo has a demo data-set that canbe used to demonstrate all of the tasks, which are documented below in the section on <a href="../model_management/index.htm">Model Collection Management in ArcGIS Pro</a>.
   </p>
  
