--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -75,6 +75,7 @@
         <li><b>The Modified status has been dropped</b>.  For any model that represents a past shape for a structure, its status simply becomes History. If the Disappear Date is left Null, this date wil be set automatically when the next geodatabase edition is pushed. 
         <li>Several new values have been added to the QA_Flag domain to support workflows for flagging Promo and Demo candidates and various cases of models needing repair. 
         <li>The Model ID has been expanded to a 21 character string in the form: <b>BOS-A1B2C-3D4E5-F6G7H</b>. This new ID has a 1 in 2 billion chance of drawing a duplicate in a model collection of 50 million models. See <a href="../model_ids/index.htm" target="sidecar">Model Identifiers</a>.
+          <li><b>Project_ID</b> will change from an Integer type to a Character string with 20 characters.  
         <li>A <b>new ModStore field</b>  has been added which wil make it possible to construct a path or URL to the OBJ for any model, some of which may be in the Changed, Internal or Existing ModelStores.
         <li>Hand-Made models of buildings that have been observed to be "topped out" will now have their status set to Construction Complete.  Models with this status will stay in the Approved_MP feature class until they are replaced by a measured model. Whence their status will become Project Complete which will cause them to be moved to the Internal feature class and model store  
  </ul>
