modified:   data_dictionary/index.htm 	new file:   events/index.htm 	modified:   home/index.htm 	modified:   model_collection/index.htm 	modified:   resources/cityschema_includes.js 	renamed:    stewardship/images/tall.jpg -> roles/images/tall.jpg 	renamed:    stewardship/images/wide.jpg -> roles/images/wide.jpg 	new file:   roles/index.htm 	deleted:    stewardship/index.htm 	modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,6 +38,13 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
+
+  <h2>Release 4.0.1 March 14 2023</h2>
+  <ul>
+    <li>Fixed tools broken due to ArcGIS Pro 3.1 update.  Several instances of the Calculate Fields (Multiple) tool were replaced.
+    <li>The Assign Geometric Attributes tool now references the Parcels, Tile Polys and Raster Elevation datasets from the Scene/Sources layer group.  
+    <br>To make the most of this feature, update the sources of the layers in your local environment and save this as a lyer file that you can swap in and out with the demo version when you update your workspace.  
+
   <h2>Release 4.0.0 February 20 2023</h2>
    <p>Major new features with this release:
     <ul>
