modified:   data_dictionary/index.htm

--- a/data_dictionary/index.htm
+++ b/data_dictionary/index.htm
@@ -376,7 +376,7 @@
     <tr>
     <td><b>History</b></td>
     <td>History_MP</td>
-    <td>A model that has been completely replaced in the Existing collection because the real-word structure has been demolished or altered. </td>
+    <td>A model that replaced in the Existing collection because the real-world structure has changed shape.  This status may be applied to models of groups of structures where a new model is replacing part of the historical model.  In these cases, the entire old model is historical, and it may divided to create a pocket for the new model. </td>
     </tr>
     
         <tr>
