modified:   data_dictionary/index.htm

--- a/data_dictionary/index.htm
+++ b/data_dictionary/index.htm
@@ -330,7 +330,7 @@
             </tr>
             <tr>
                 <td id="retired_mp"><b>Retired_MP</b></td>
-                <td>Models that have been replaced in the <b>Existing_MP</b> status class by another model of the same structure (same geometric form) that was observed at different dates or modeled with different creator (Model_Credit) with a different modeling technique or level of detail than the model currently chosen for the <b>Existing_MP</b> status class.  Retired models are preserved for the purposes of possible recovery and as they reflect a valuable record of observations or creative work.</td>  Status: <b>Alt</b>.  These models are removed from the <b>As-Built</b> model store on major updates; whence they wil be recoverable form their model batch folders.</td>
+                <td>Measured models that have been replaced in the <b>Existing_MP</b> status class by another model of the same structure (same geometric form) that was observed at different dates or modeled by different creator (Model_Credit) with a different modeling technique or level of detail than the model currently chosen for the <b>Existing_MP</b> status class.  Retired models are preserved for the purposes of possible recovery and as they reflect a valuable record of observations or creative work.</td>  
             </tr>
             <tr>
                 <td><b>Approved_MP</b></td>
@@ -338,7 +338,7 @@
             </tr>
             <tr>
                 <td><b>Internal_MP</b></td>
-                <td>Holds hand-made models that are created for internal investigations. Status <b></b>,<b>Internal Study</b>,<b>Pre-File</b>, <b>Under Review</b>, <b>Proposal Superseded</b>,<b>Proposal Built</b>. These models are shared on public web scenes or in the model download site. hey are stored in the <b>Internal</b> model store.</td>
+                <td>Hand-made models that are created for internal investigations. This feature class holds all hand-made models created for the project review and approval process and for internal studies.  Status <b>Internal Study</b>,<b>Pre-File</b>, <b>Under Review</b>, <b>Proposal Superseded</b>,<b>Proposal Built</b>.  While hand-made models have status of <b>Approved</b> or <b>Under Construction</b>, they are part of the Approved Feature Class.  When they are replaced by measured models, they return to Internal_MP with status <b>Proposal Built</b> are shared on public web scenes or in the model download site. they are stored in the <b>Internal</b> model store.</td>
             </tr>
             <tr>
                 <td><b>Alt_MP</b></td>
