modified:   data_dictionary/index.htm 	new file:   slideshow/MIT_DigitalHumanities_20230426.pdf 	modified:   whatsnew/index.htm

--- a/data_dictionary/index.htm
+++ b/data_dictionary/index.htm
@@ -36,10 +36,7 @@
 
 <!-- Page content goes inside the article div -->
   <div id="article">
-
-
-    <br><hr>
-    <h1>Data Dictionary for Models of Built Structures </h1>
+    <h1 class="title">Data Dictionary for Models of Built Structures </h1>
     <p>The Bos3d City Model includes a <b>Model Collection</b> of more than 100,000 models representing built structures.  These models originate from many different sources. The Model Management Schema provides a system of attributes that can be used to understand the provenance of models and to keep track of models through their life-cycle.  
     <p>The <b>Model Catalog</b> is a single table with a reference for each model in the structure model collection.  
     </p>
