--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,6 +38,8 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
+  <h2>April 28, 2023:  Slides presented at the MIT Conference on Digital Humanities</h2>
+  <a href="../slideshow/MIT_DigitalHumanities_20230426.pdf" target="sidecar">MIT_DigitalHumanities_20230426.pdf</a>
 
   <h2>Release 4.0.1 March 14 2023</h2>
   <ul>
